<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              android:clickable="true"
              android:focusable="true"
              tools:context=".detail.DetailFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/default_margin"
                android:layout_gravity="center_vertical"
                style="@style/Text.Header"
                tools:text="@tools:sample/full_names"/>

        <ImageView
                android:id="@+id/closeButton"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_margin="@dimen/default_margin"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_close_black_24dp"/>
    </LinearLayout>

    <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/avatars"/>

    <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            style="@style/Text.BodyPrimary"
            tools:text="2018"/>

    <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            style="@style/Text.BodyPrimary"
            tools:text="King T'Challa returns home from America to Wakanda"/>
</LinearLayout>