<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <TextView
            android:id="@+id/categoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Header"
            android:layout_margin="@dimen/default_margin"
            tools:text="TV Shows"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>